# otus-final

./: .gitignore  README.md  pyproject.toml
contrib/: gunicorn.py  netwatcher-celery.service  netwatcher.service
netwatcher/: manage.py
netwatcher/frontend/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
netwatcher/frontend/src/: store.js
netwatcher/frontend/src/actions/: auth-action.js  auth.js  groups-actions.js  home-action.js  home.js  jobs-action.js  (+3 more)
netwatcher/jobs/: __init__.py  admin.py  choises.py  filters.py  models.py  nested_serializers.py  serializers.py  signals.py  urls.py  views.py
netwatcher/jobs/migrations/: 0001_initial.py  0002_group.py  0003_job.py  0003_result.py
netwatcher/netwatcher/: celery.py  configuration.example.py  settings.py  urls.py  views.py  wsgi.py
netwatcher/project-static/frontend/: 1.index.js  10.index.js  100.index.js  101.index.js  102.index.js  103.index.js  104.index.js  105.index.js  106.index.js  107.index.js  108.index.js  109.index.js  11.index.js  110.index.js  111.index.js  112.index.js  113.index.js  114.index.js  115.index.js  116.index.js  117.index.js  118.index.js  119.index.js  12.index.js  120.index.js  121.index.js  122.index.js  123.index.js  124.index.js  125.index.js  126.index.js  127.index.js  128.index.js  129.index.js  13.index.js  130.index.js  131.index.js  132.index.js  133.index.js  134.index.js  (+151 more)
netwatcher/templates/: index.html
netwatcher/users/: api.py  serializers.py  signals.py  urls.py
netwatcher/utils/: helpers.py  nornir_dcbox.py  platforms.py  tasks.py
(+28 files in other folders)
